Update documentation (screenshot)
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@632 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/doc/user_manual.tex
+++ b/doc/user_manual.tex
@@ -541,7 +541,27 @@ Static screenshots and animated screenshots both use settings. Here's how to use
 
 \paragraph{Size}
 
-You can choose between 3 "default" size for the screenies :\newline
+
+You can choose between "default" size for the screenies :\newline
+7 default size for the TI-86 and 3 for the other models.\newline
+
+\begin{figure}[H]
+\centering
+\scalebox{0.5}{\includegraphics{pixs/screenshot_widget_size_list.png}}
+\caption{The "Size" listbox for all models except TI-86}
+\end{figure}
+
+For the TI-86, ratio and values proposed by default are different: \newline
+
+\begin{figure}[H]
+\centering
+\scalebox{0.5}{\includegraphics{pixs/screenshot_widget_size_list_86.png}}
+\caption{The "Size" listbox for TI-86}
+\end{figure}
+
+Default values are proposed to help you to choose correct ratio (the choice depends on the size of the lcd).\newline
+
+Here's what you have for all models except TI-86 :\newline
 \begin{itemize}
 \item 96 x 64
 \begin{figure}[H]
@@ -563,6 +583,8 @@ You can choose between 3 "default" size for the screenies :\newline
 \end{figure}
 \end{itemize}
 
+I will not show the same screenshot for the TI-86 it's not necessary.\newline
+
 This is "default" sized screenies but you can set your own (warning : try to keep the ratio).\newline
 Setting your own size could produce some curious results (here the biggest possible) :\newline
 \begin{figure}[H]
@@ -577,10 +599,23 @@ There's a setting called "Animation speed" which is used by the animated screeni
 If you increment this value, the animation will run faster.\newline
 A visual feedback will show you the effect of increasing this value.\newline
 The max is set to 100.\newline
+\begin{figure}[H]
+\centering
+\scalebox{0.5}{\includegraphics{pixs/screenshot_widget_animation_speed.png}}
+\caption{The "Animation speed" widget}
+\end{figure}
+
 
 \paragraph{Foreground and background colors}
 
 Below the "animation speed" there's 2 color chooser which allow you to set your own colors for foreground and background colors (as you know z80 calc LCD is monochrome).\newline
+
+\begin{figure}[H]
+\centering
+\scalebox{0.5}{\includegraphics{pixs/screenshot_widget_color_chooser.png}}
+\caption{The "Color chooser" widget}
+\end{figure}
+
 The grayscales screenies are fully compatible with this setting of course (because it's no more than "flashing").\newline
 Here's a sample of what you get if you choose a pink as foreground color and green as background color :\newline
 \begin{figure}[H]
@@ -599,6 +634,13 @@ Let's see a bunch of colored screenies:\newline
 Of course these settings are usually used to correct contrast or simply set a better color ratio (not to do the useless but funny screenshots I've shown just before).\newline
 
 \paragraph{Grayscale}
+
+
+\begin{figure}[H]
+\centering
+\scalebox{0.5}{\includegraphics{pixs/screenshot_widget_grayscale.png}}
+\caption{The "Grayscale" checkbox}
+\end{figure}
 
 A last setting called "Grayscale" let you choose the rendering mode.\newline
 %%%% Benjamin could you talk about grayscale checkbox here %%%
