--- a/THANKS
+++ b/THANKS
@@ -31,3 +31,7 @@ The following people deserve special recognition for their research:
 Randy Compton, Tijl Coosemans, Brian Coventry, Dan Eble, Dan
 Englender, Dines Justesen, Julien Lasson, Mattias Lindqvist, James
 Montelongo, Michael Vincent, Brandon Wilson, and Joerg Woerner.
+
+(Thibault) In addition of above:
+Thanks to Michael Nock and Guillaume Hoffman for testing, feature request and encouragement.
+Thanks to Xavier Andreani for his encouragement.
