--- a/README
+++ b/README
@@ -11,8 +11,8 @@ models:
     TI-82
     TI-82 STATS / TI-82 STATS.fr
     TI-83
-    TI-83 Plus and TI-83 Plus Silver Edition
-    TI-84 Plus and TI-84 Plus Silver Edition
+    TI-83 Plus / TI-83 Plus Silver Edition / TI-83 Plus.fr
+    TI-84 Plus / TI-84 Plus Silver Edition / TI-84 pocket.fr
     TI-85
     TI-86
 
