Changes to documentation for release
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@656 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
                            Version History
                           -----------------
 
-2012-xx-xx -- version 2.0
+2012-06-07 -- version 2.0
 
   This is the first official release of the "new" TilEm.  Much of the
   old TilEm code has been rewritten, and there are many improvements
