--- a/THANKS
+++ b/THANKS
@@ -15,7 +15,7 @@ by Julien Blache.  The GIF compression code is based on whirlgif,
 written by Hans Dinsen-Hansen and Michael A. Mayer.
 
 Thanks to Claude Clerc for the photo of his TI-83 Plus, and to Danilo
-Segan for the photo of his TI-86, which we have used as skins.  Thanks
+Šegan for the photo of his TI-86, which we have used as skins.  Thanks
 to Scott Zeid for the design of the program icon.
 
 TilEm uses the TiLP libraries (libticalcs2, libticables2, libtifiles2,
