Add a wonderful ti83plus fr skin. Not a real picture, but a virtual svg reproduction. Thanks a lot to Olivier Jeulin
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@658 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/doc/user_manual.tex
+++ b/doc/user_manual.tex
@@ -52,12 +52,14 @@
 \begin{document}
 \maketitle
 
+%BEGIN IMAGE
 \begin{figure}[H]
 \centering
 \scalebox{1}{\includegraphics{pixs/tilem2.png}}
 \caption{TilEm2}
 \end{figure}
-
+%END IMAGE
+%HEVEA\imageflush
 
 \tableofcontents
 
@@ -74,11 +76,14 @@ Some of you probably already know TilEm because a first version was released aro
 This first version was working fine but there were some issues, skins were too small and bad resolution and a lot of feature were missing.\newline
 Anyway, this software was pretty good (especially because the core emulation was very good).\newline
 
+%BEGIN IMAGE
 \begin{figure}[H]
 \centering
 \scalebox{1}{\includegraphics{pixs/tilem_old.png}}
 \caption{The "old" TilEm}
 \end{figure}
+%END IMAGE
+%HEVEA\imageflush
 
 \begin{figure}[H]
 \centering
@@ -1901,3 +1906,4 @@ You can also convert a TiEmu or VTI skin file using skinedit then use it with Ti
 Do not hesitate to send us your skins file, maybe we could use it as official skin !\newline
 
 \end{document}
+
