--- a/data/skins/README
+++ b/data/skins/README
@@ -28,6 +28,7 @@ TI82stats.skn = GFDL wikimedia.commons
 ti83.skn = My TI83 !!!
 ti83p.skn = GFDL wikimedia.commons
 ti83pfr.skn = GPL v3+ given by Claude Clerc (aka claudiux). It's his calc. Thanks to him !!!
+ti83pfr2.skn = GPL v3+ given Olivier Jeulin. Thanks a lot. This skin is wonderful.
 ti84p.skn = My TI84plus !!!
 ti84p2.skn = Mine.
 ti86.skn = LGPL v2.1. Picture given by Danilo Segan. I've resized with the gimp and I've done the skin (the skin given by Danilo was perfect but too big).Thanks to him !!!
