--- a/po/fr.po
+++ b/po/fr.po
@@ -922,17 +922,12 @@ msgstr[1] "Remplacer des fichiers existants "
 
 #: gui/rcvmenu.c:99
 #, c-format
-msgid ""
-"The file \"%2$s\" already exists in \"%1$s\".  Replacing it will overwrite "
-"its contents."
-msgid_plural ""
-"The following files already exist in \"%s\".  Replacing them will overwrite "
+msgid "The file \"%2$s\" already exists in \"%1$s\".  Replacing it will overwrite "
+"its contents.\n"
+msgid_plural "The following files \"%s\" already exist in \"%s\".  Replacing them will overwrite "
 "their contents:\n"
-"%s"
-msgstr[0] ""
-"Le fichier existe deja dans \"%s\".  Le remplacer va effacer son contenu."
-msgstr[1] ""
-"Les fichiers existent deja dans \"%s\".  Les remplacer va effacer leurs contenu."
+msgstr[0] "Le fichier \"%s\" existe deja dans \"%s\".  Le remplacer va effacer son contenu.\n"
+msgstr[1] "Les fichiers \"%s\" existent deja dans \"%s\".  Les remplacer va effacer leurs contenu.\n"
 
 #: gui/rcvmenu.c:146 gui/rcvmenu.c:205
 msgid "Save File"
@@ -1245,7 +1240,7 @@ msgstr "%s: modele inconnu %s\n"
 #: gui/tilem2.c:318
 #, c-format
 msgid "%s: invalid link cable %s\n"
-msgstr ""
+msgstr "%s: cable ivalide %s\n"
 
 #: gui/tool.c:280
 msgid "Select Calculator Type"
